# multimodal

./: .gitignore  PROMPTS.md  README.md  api.py  chunk.txt  doc.md  img.txt  main.py  pyproject.toml
.cursor/rules/: python-artichecture.mdc
content/: attention.pptx
content/docs/: .~lock.test.docx#  test.docx
fe/: index.html  package-lock.json  package.json
fe/src/: App.vue
fe/src/components/: ChatBox.vue
fe/src/stores/: chat.js
src/: __init__.py  app.py
src/application/: __init__.py
src/application/services/: __init__.py  document_parser.py  prompt_builder.py  summarization_service.py
src/application/use_cases/: __init__.py  chat_use_case.py  index_use_case.py
src/config/: __init__.py  container.py  settings.py
src/data/: __init__.py  mock_data.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  document.py
src/domain/interfaces/: __init__.py  document_store.py  embedding_provider.py  llm_provider.py  vector_repository.py
src/infrastructure/: __init__.py
src/infrastructure/embeddings/: __init__.py  ollama_embeddings.py
src/infrastructure/llm/: __init__.py  google_provider.py  ollama_provider.py
src/infrastructure/parsers/: __init__.py  document_parser.py  docx_parser.py  image_parser.py  pdf_parser.py  pptx_parser.py
src/infrastructure/repositories/: __init__.py  chroma_repository.py  inmemory_store.py  multivector_repository.py
src/interfaces/api/: __init__.py  routes.py  schemas.py
