[project]
name = "multimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "docx2txt>=0.9",
    "fastapi>=0.115.0",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "unstructured[all-docs]>=0.18.21",
    "uvicorn>=0.32.0",
]
